
[package]
name = "glsl-cookbook-rs"
version = "0.6.6"
authors = ["unknownue <usami-ssc@protonmail.com>"]
edition = "2018"
description = "A Rust implementation of *OpenGL 4 Shading Language Cookbook 3rd*"

[dependencies]
lazy_static = "1.3.0"
failure = "0.1.5"
rental = "0.5.4"

glium  = "0.24.0"
vek    = "0.9.7"
png    = "0.15.0"
hdrldr = "0.1.2"
