
[package]
name = "glsl-cookbook-rs"
version = "0.9.1"
authors = ["unknownue <usami-ssc@protonmail.com>"]
edition = "2018"
description = "A Rust implementation of *OpenGL 4 Shading Language Cookbook 3rd*"

[dependencies]
lazy_static = "1.3.0"
failure = "0.1.5"
rand = "0.7.0"
rental = "0.5.4"
itertools = "0.8.0"

# glium  = "0.24.0"
glium = { version = "0.24.0", path = "../../Rust/glium-0.24.0/"}
vek    = "0.9.7"
png    = "0.15.0"
hdrldr = "0.1.2"
