
[package]
name = "glsl-cookbook-rs"
version = "0.10.0"
authors = ["unknownue <usami-ssc@protonmail.com>"]
edition = "2018"
description = "A Rust implementation of *OpenGL 4 Shading Language Cookbook 3rd*"

[dependencies]
lazy_static = "1.4.0"
failure = "0.1.5"
rand = "0.7.0"
rental = "0.5.4"
itertools = "0.8.0"

glium = { git = "https://github.com/glium/glium", branch = "master" }
vek    = "0.9.9"
png    = "0.15.0"
hdrldr = "0.1.2"
